package com.amazon.ata.types;

import java.math.BigDecimal;

public class PolyBag extends Packaging {

    BigDecimal volume;

}
